--- a/client/src/App.css
+++ b/client/src/App.css
@@ -40,89 +40,95 @@
 
 /* Tout les boutons de l'application */
 
-button {
-  font-size: 20px;
+.button {
+  /* font-size: 20px; */
+  font-size: 1.5rem;
   color: #FFF;
   background-color: #518071;
   border: none;
-  border-radius: 20px;
-  padding: 15px 40px;
+  border-radius: 1rem;
+  padding: 1rem 3rem;
 }
 
-button:hover {
+.button:hover {
   color: #f9f9f9;
   background-color: #3e5e54;
   cursor: pointer;
 }
 
-/* header */
-
-.header {
-  background-color: #518071;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 10px;
-  margin-bottom: 20px;
-}
-
-.header img {
-  cursor: pointer;
-}
-
-.header .menu {
-  height: 40px;
-  color: #FFF;
-}
-
-.header .logo {
-  width: 100px;
-}
-
-.header .profil-img {
-  border-radius: 50px;
-  height: 60px;
-}
-
-/* Acceuil / HomePage */
+/* HomePage */
 
 .app {
-  padding: 50px 10px;
+  padding: 3.75rem 0.75rem;
 }
 
 .app h1 {
-  margin: 0 0 20px 0;
-  font-size: 30px;
+  margin: 0 0 1.5rem 0;
+  font-size: 2.25rem;
   font-weight: bold;
 }
 
-.app h2, p {
-  font-size: 15px;
+.app h2,
+p {
+  font-size: 1rem;
   text-align: left;
 }
 
 .app h2 {
-  margin: 40px 0 0 0;
+  margin: 3rem 0 0 0;
   font-weight: bold;
 }
 
 .app p {
-  margin: 0 0 40px 0;
+  margin: 0 0 3rem 0;
 }
 
 .app img {
   width: 100%;
 }
 
-/* footer */
+/* responsive ecran de tablette */
 
-.footer {
-  background-color: #518071;
-  padding: 10px;
-  margin-top: 20px;
+@media screen and (min-width: 576px) {
+
+  /* Acceuil / HomePage */
+
+  .app {
+    padding: 3.75rem;
+  }
+
+  .app h2,
+  p {
+    text-align: center;
+  }
+
+  .app h2 {
+    margin: 6rem 0 0 0;
+  }
+
+  .app p {
+    margin: 0 0 6rem 0;
+  }
+
+  .app img {
+    width: 75%;
+  }
 }
 
-.footer p {
-  color: #FFF;
-  margin: 0;
+/* responsive ecran de PC */
+
+@media screen and (min-width: 992px) {
+  .app h1 {
+    font-size: 3rem;
+  }
+
+  .app h2,
+  p {
+    text-align: center;
+    font-size: 1.5rem;
+  }
+
+  .app img {
+    width: 50%;
+  }
 }
