--- a/client/src/Components/css/Footer.css
+++ b/client/src/Components/css/Footer.css
@@ -1,7 +1,7 @@
 .footer {
     background-color: #518071;
-    padding: 0.75rem;
-    margin-top: 1.5rem;
+    padding: 10px;
+    margin-top: 20px;
 }
 
 .footer p {
