--- a/client/src/Components/css/Header.css
+++ b/client/src/Components/css/Header.css
@@ -3,8 +3,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0.75rem;
-    margin-bottom: 1.5;
+    padding: 10px;
+    margin-bottom: 20px;
 }
 
 .header img {
@@ -12,7 +12,7 @@
 }
 
 .header .menu {
-    height: 3rem;
+    height: 40px;
     color: #FFF;
 }
 
@@ -21,6 +21,6 @@
 }
 
 .header .profil-img {
-    border-radius: 3.75rem;
-    height: 4.5rem;
+    border-radius: 50px;
+    height: 60px;
 }
