--- a/client/src/App.css
+++ b/client/src/App.css
@@ -41,13 +41,12 @@
 /* Tout les boutons de l'application */
 
 .button {
-  /* font-size: 20px; */
-  font-size: 1.5rem;
-  color: #FFF;
+  font-size: 1rem;
+  color: #FBFBFB;
   background-color: #518071;
   border: none;
-  border-radius: 1rem;
-  padding: 1rem 3rem;
+  border-radius: 5px;
+  padding: 16px 48px;
 }
 
 .button:hover {
