--- a/client/src/Components/css/LeftMenuPC.css
+++ b/client/src/Components/css/LeftMenuPC.css
@@ -10,6 +10,7 @@
     bottom: 0;
     /* attention : la valeur est liée au margin-left du .app de la "media query PC" dans "Home.css" */
     width: 175px;
+    z-index: 1;
 }
 
 .left-menu-pc img,
