--- a/client/src/screens/css/Home.css
+++ b/client/src/screens/css/Home.css
@@ -1,11 +1,11 @@
 /* Tout les boutons de l'application */
-
 .button {
-    font-size: 1.5rem;
+    font-size: 1rem;
+    font-weight: bold;
     color: #FFF;
     background-color: #518071;
     border: none;
-    border-radius: 20px;
+    border-radius: 5px;
     padding: 15px 40px;
 }
 
