redirection identique à la précédente, mais pour la LeftBarrePC + style pour centrer le bouton logout caché par la barre

--- a/client/src/screens/css/login.css
+++ b/client/src/screens/css/login.css
@@ -54,6 +54,10 @@
     color: #518071;
 }
 
+.logout {
+    text-align: center;
+}
+
 @media screen and (min-width: 576px){
     .input_connexion input{
         width: 45%;
