--- a/client/src/Components/css/Footer.css
+++ b/client/src/Components/css/Footer.css
@@ -1,12 +1,11 @@
 .footer {
-    position: absolute;
+    position: relative;
     bottom: 0;
     width: 100%;
     height: 40px;
     display: flex;
-    background-color: #518071;
-    margin-top: 20px;
-    
+    background-color: #518071;  
+    margin-top: 20px; 
 }
 
 .footer p {
