--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,8 +1,9 @@
 html{
-  height: 100%;
+  height: 100vh;
 }
 
 body {
+  position: relative;
   margin: 0;
   padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
