--- a/client/src/screens/css/Profil.css
+++ b/client/src/screens/css/Profil.css
@@ -1,7 +1,6 @@
-.main{
+.main_profil{
     width: 100%;
     height: auto;
-    position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -12,7 +11,7 @@
     margin: 0 auto;
     width: 50%;
     text-align: center;
-    margin-top: 120px;
+    margin-top: 30px;
 }
 
 .container_avatar img{
@@ -50,7 +49,6 @@
 
 .input_description {
     width: 100%;
-    margin-top: 30px;
 }
 
 .input_description textarea{
@@ -62,14 +60,17 @@
     outline: none;
 }
 
-
+.button_edit_profil a{
+    color: white;
+    text-decoration: none;
+}
 
 .button_deconnexion{
     width: 100%;
     height: 10px;
-    top: 100px;
     text-align: center;
     margin-top: 30px;
+    margin-bottom: 50px;
 }
 
 @media screen and (min-width: 576px){
