ajustement header/footer, mise en place de la page profil front/back et initialisation de la page edit

--- a/client/src/Components/css/Header.css
+++ b/client/src/Components/css/Header.css
@@ -24,3 +24,9 @@
     border-radius: 50px;
     height: 60px;
 }
+
+@media screen and (min-width: 992px) {
+    .header {
+        display: none;
+    }
+}
