--- a/client/src/Components/css/Footer.css
+++ b/client/src/Components/css/Footer.css
@@ -13,3 +13,9 @@
     text-align: center;
     margin: auto;
 }
+
+@media screen and (min-width: 992px) {
+    .footer {
+        display: none;
+    }
+}
