--- a/client/src/Components/css/LeftMenuPC.css
+++ b/client/src/Components/css/LeftMenuPC.css
@@ -37,7 +37,7 @@
   text-decoration: none;
 }
 
-.option-liste {
+nav {
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -57,8 +57,7 @@
 }
 
 .option:hover {
-  color: rgb(254, 254, 254);
-  background: rgb(254, 254, 254, 0.2);
+  color: rgba(255, 255, 255, 0.5);
 }
 
 .option svg {
@@ -67,11 +66,8 @@
   margin-right: 12px;
 }
 
-.option a {
+nav a {
   color: #fefefe;
-}
-.option a:active {
-  color: #3d3434;
 }
 
 @media screen and (max-width: 992px) {
