--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,12 +6,17 @@ body {
   position: relative;
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+  font-family: -apple-system, BlinkMacSystéàemFont, "Segoe UI", "Roboto",
+    "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #fefefe;
+  background-image: linear-gradient(
+    to bottom,
+    rgb(81, 128, 113, 0.8) 9%,
+    rgb(254, 254, 254, 0.95) 25%
+  );
+  background-attachment: fixed;
 }
 
 code {
