--- a/client/src/screens/css/Home.css
+++ b/client/src/screens/css/Home.css
@@ -1,105 +1,109 @@
 /* Tout les boutons de l'application */
 .button {
-    font-size: 1rem;
-    font-weight: bold;
-    color: #FFF;
-    background-color: #518071;
-    border: none;
-    border-radius: 5px;
-    padding: 15px 40px;
+  font-size: 1rem;
+  font-weight: bold;
+  color: #fff;
+  background-color: #518071;
+  border: none;
+  border-radius: 5px;
+  padding: 15px 40px;
+  transition: all ease 0.2s;
 }
-
-a{
-    text-decoration: none;
-    color: #FFF;
+.app .button {
+  margin-top: 50px;
+}
+a {
+  text-decoration: none;
+  color: #fff;
 }
 
 .button:hover {
-    color: #f9f9f9;
-    background-color: #3e5e54;
-    cursor: pointer;
+  color: #f9f9f9;
+  background-color: #3e5e54;
+  cursor: pointer;
 }
 
 /* HomePage */
 
 .app {
-    padding: 50px 10px;
-    text-align: center;
+  padding: 50px 5px;
+  text-align: center;
 }
 
 .app h1 {
-    margin: 0 0 20px 0;
-    font-size: 30px;
-    font-weight: bold;
+  margin: 0 0 20px 0;
+  font-weight: normal;
+  font-size: 2rem;
+  color: #000000;
 }
 
 .app h2,
-p {
-    font-size: 1rem;
-    text-align: left;
+.app p {
+  font-size: 1rem;
+  text-align: left;
+  width: 90%;
+  display: block;
+  margin: 0 auto;
 }
 
 .app h2 {
-    margin: 40px 0 0 0;
-    font-weight: bold;
-}
-
-.app p {
-    margin: 0 0 40px 0;
+  font-weight: bold;
 }
 
 .app img {
-    width: 100%;
+  width: 90%;
+  margin-bottom: 50px;
+  margin-top: 20px;
 }
 
 /* responsive ecran de tablette */
 
 @media screen and (min-width: 576px) {
-    .app {
-        padding: 50px;
-    }
+  .app {
+    padding: 50px;
+  }
 
-    .app h2,
-    p {
-        text-align: center;
-    }
+  .app h2,
+  p {
+    text-align: center;
+  }
 
-    .app h2 {
-        margin: 80px 0 0 0;
-    }
+  .app h2 {
+    margin: 80px 0 0 0;
+  }
 
-    .app p {
-        margin: 0 0 80px 0;
-    }
+  .app p {
+    margin: 0 0 80px 0;
+  }
 
-    .app img {
-        width: 75%;
-    }
+  .app img {
+    width: 75%;
+  }
 }
 
 /* responsive ecran de PC */
 
 @media screen and (min-width: 992px) {
-    .app {
-        /* attention : la valeur est liée au width du left-menu-pc dans "LeftMenuPC.css" */
-        margin-left: 175px;
-    }
+  .app {
+    /* attention : la valeur est liée au width du left-menu-pc dans "LeftMenuPC.css" */
+    margin-left: 175px;
+  }
 
-    .app h1 {
-        font-size: 3rem;
-    }
+  .app h2,
+  .app p {
+    text-align: left;
+    width: 60%;
+    margin: 0 auto;
+  }
 
-    .app h2,
-    p {
-        text-align: center;
-        font-size: 1.5rem;
-    }
+  .app img {
+    width: 60%;
+  }
 
-    .app img {
-        width: 50%;
-    }
-
-    .pc {
-        display: flex;
-    }
+  .pc {
+    display: flex;
+  }
+  .app h1 {
+    color: #000000;
+  }
 }
